# Kiwano

./: .gitignore  CMakeLists.txt  README.md
JUCE/: AppConfig.h
JUCE/examples/AnimationAppExample/Builds/VisualStudio2010/: AnimationAppExample.vcxproj  AnimationAppExample.vcxproj.filters
JUCE/examples/AudioAppExample/Builds/VisualStudio2010/: AudioAppExample.vcxproj  AudioAppExample.vcxproj.filters
JUCE/examples/Demo/Builds/VisualStudio2010/: JuceDemo.vcxproj  JuceDemo.vcxproj.filters
JUCE/examples/Demo/Builds/VisualStudio2012/: JuceDemo.vcxproj
JUCE/examples/Demo/Builds/VisualStudio2013/: JuceDemo.vcxproj  JuceDemo.vcxproj.filters
JUCE/examples/Demo/Builds/VisualStudio2015/: JuceDemo.vcxproj  JuceDemo.vcxproj.filters
JUCE/examples/Demo/Source/Demos/: MDIDemo.cpp  OpenGLDemo.cpp
JUCE/examples/HelloWorld/Builds/VisualStudio2005/: HelloWorld.vcproj
JUCE/examples/HelloWorld/Builds/VisualStudio2008/: HelloWorld.vcproj
JUCE/examples/OpenGLAppExample/Builds/VisualStudio2010/: OpenGLAppExample.vcxproj  OpenGLAppExample.vcxproj.filters
JUCE/examples/audio plugin demo/Builds/VisualStudio2005/: JuceDemoPlugin.vcproj
JUCE/examples/audio plugin demo/Builds/VisualStudio2008/: JuceDemoPlugin.vcproj
JUCE/examples/audio plugin demo/Builds/VisualStudio2010/: JuceDemoPlugin.vcxproj  JuceDemoPlugin.vcxproj.filters
JUCE/examples/audio plugin host/: Plugin Host.jucer
JUCE/examples/audio plugin host/Builds/VisualStudio2010/: Plugin Host.vcxproj  Plugin Host.vcxproj.filters
JUCE/examples/audio plugin host/Source/: FilterGraph.cpp  FilterGraph.h  GraphEditorPanel.cpp  GraphEditorPanel.h  HostStartup.cpp  MainHostWindow.cpp  MainHostWindow.h
JUCE/modules/juce_audio_formats/: juce_audio_formats.cpp  juce_audio_formats.h
JUCE/modules/juce_audio_formats/codecs/: juce_FFmpegAudioFormat.cpp  juce_MP3AudioFormat.cpp  juce_WavPackAudioFormat.cpp
JUCE/modules/juce_audio_formats/format/: juce_AudioFormatManager.cpp
JUCE/modules/juce_audio_plugin_client/VST3/: juce_VST3_Wrapper.cpp
JUCE/modules/juce_core/maths/: juce_MathsFunctions.h
JUCE/modules/juce_core/native/: juce_BasicNativeHeaders.h  juce_win32_ComSmartPtr.h
JUCE/modules/juce_core/network/: juce_Socket.cpp
JUCE/modules/juce_core/time/: juce_Time.cpp
JUCE/modules/juce_graphics/: juce_graphics.cpp
JUCE/modules/juce_graphics/contexts/: juce_GraphicsContext.cpp
JUCE/modules/juce_graphics/images/: juce_Image.h
JUCE/modules/juce_graphics/native/: juce_RenderingHelpers.h
JUCE/modules/juce_gui_basics/native/: juce_win32_FileChooser.cpp
cmake/Modules/: FindFFmpeg.cmake  FindGranite.cmake  Findlibcue.cmake  Findsqlite.cmake  Findtaglib.cmake
data/: init.lisp
project/: init.bat  init.sh
src/: customTags.cpp  customTags.hpp  fxTemplates.hpp  graphics.hpp  includes.hpp  interface.hpp  interpreter.hpp  layout.hpp  listeners.hpp  main.cpp  panel.hpp  playback.hpp  playlist.hpp  playlistModel.hpp  playlistProgress.hpp  seekRange.hpp  settings.cpp  settings.hpp  slider.hpp  stream.inc.hpp  supportedFormats.hpp  tabs.hpp  utils.hpp  window.hpp
